fixes readable and writable position temporairly

--- a/src/less/freelancer.less
+++ b/src/less/freelancer.less
@@ -102,13 +102,13 @@ hr.star-primary:after {
 
 #myReadable {
 
-   margin-top: 200px;
+   margin-top: 190px;
 }
 
 
 #myWritable  {
 
-  margin-top: 20px;
+  margin-top: 190px;
 }
 
 #myWritable ul li {
@@ -160,7 +160,6 @@ hr.star-primary:after {
 #camPicture {
     position: relative;
     padding-bottom: 60px;
-
     height: 0;
 }
 #camPicture iframe {
